# git-ai

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: gacli.rs  gagit.rs  gaollama.rs  main.rs
