[package]
name = "git-ai"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
git2 = "0.20.4"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
reqwest-streams = { version = "0.15.0", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
